Completed Score Prediction

--- a/Eduke/eduke/main/static/main/css/style.css
+++ b/Eduke/eduke/main/static/main/css/style.css
@@ -140,6 +140,10 @@ tbody{
         display: none !important;
     }
 
+    #performance-details {
+        display: none !important;
+    }
+
     #content-wrapper {
         height: auto !important;
         max-height: none !important;
