--- a/Eduke/eduke/main/templates/parents/parent_eduke_bot.html
+++ b/Eduke/eduke/main/templates/parents/parent_eduke_bot.html
@@ -75,6 +75,12 @@
                   Student Performance
                 </a>
               </li>
+              <li>
+                <a href="{% url 'parent_prediction' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                    <i class="fa-solid fa-fire-flame-curved"></i> &nbsp;
+                    Score Prediction
+                </a>
+              </li>
               <li class="bg-gray-300 rounded-md">
                 <a href="" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-robot"></i> &nbsp;
