--- a/Eduke/eduke/main/templates/parents/parent_student_performance.html
+++ b/Eduke/eduke/main/templates/parents/parent_student_performance.html
@@ -76,6 +76,12 @@
                 </a>
               </li>
               <li>
+                <a href="{% url 'parent_prediction' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                    <i class="fa-solid fa-fire-flame-curved"></i> &nbsp;
+                    Score Prediction
+                </a>
+              </li>
+              <li>
                 <a href="{% url 'parent_eduke_bot' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-robot"></i> &nbsp;
                   Eduke Bot
