--- a/Eduke/eduke/main/templates/students/student_performance.html
+++ b/Eduke/eduke/main/templates/students/student_performance.html
@@ -59,9 +59,15 @@
               </li>
               <li>
               <li class="bg-gray-300 rounded-md">
-                <a href="#" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                <a href="{% url 'student_performance' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
                   <i class="fa-solid fa-chart-line"></i> &nbsp;
                   Your Performance
+                </a>
+              </li>
+              <li>
+                <a href="{% url 'student_prediction' %}" class="flex items-center p-2 rounded-md hover:bg-[#e8c7ff]">
+                    <i class="fa-solid fa-fire-flame-curved"></i> &nbsp;
+                    Score Prediction
                 </a>
               </li>
               <li>
